[gd_scene load_steps=21 format=2]

[ext_resource path="res://elements/camera/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://assets/Rocky Roads/coin.png" type="Texture" id=2]
[ext_resource path="res://assets/Rocky Roads/heart.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Squares.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/60-Sky-gradiant-pack1/Sky_gradient_56.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 4 ), SubResource( 4 ), SubResource( 4 ), SubResource( 4 ) ],
"loop": true,
"name": "life",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 8 ), SubResource( 8 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="DynamicFont" id=13]
size = 14
outline_size = 8
outline_color = Color( 0.819608, 0.831373, 0.298039, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=14]
resource_name = "title"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/win:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 200, -100 ), Vector2( 125, 150 ), Vector2( 250, 100 ), Vector2( 200, 150 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/win:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 0.8 ), Vector2( 0.8, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 516.492, 10 )

[node name="Camera2D" type="Camera2D"]
position = Vector2( 0, 300 )
current = true
limit_left = -32
drag_margin_h_enabled = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = 119.201
margin_top = 47.0
margin_right = 293.201
margin_bottom = 87.0
color = Color( 0.243137, 0.243137, 0.243137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
margin_left = 463.16
margin_top = 47.0
margin_right = 637.16
margin_bottom = 87.0
color = Color( 0.243137, 0.243137, 0.243137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer"]
margin_left = 760.501
margin_top = 47.0
margin_right = 934.501
margin_bottom = 87.0
color = Color( 0.243137, 0.243137, 0.243137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="n_life" type="Label" parent="CanvasLayer"]
margin_left = 187.272
margin_top = 49.4078
margin_right = 230.272
margin_bottom = 106.408
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="CanvasLayer"]
margin_left = 522.681
margin_top = 49.6945
margin_right = 562.681
margin_bottom = 99.6945
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Label" parent="CanvasLayer"]
margin_left = 780.201
margin_top = 47.3023
margin_right = 919.902
margin_bottom = 90.3023
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 90.201, 25 )
scale = Vector2( 5, 5 )
frames = SubResource( 7 )
animation = "life"
frame = 3
centered = false

[node name="coin" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 430.201, 25 )
scale = Vector2( 5, 5 )
frames = SubResource( 12 )
centered = false

[node name="win" type="Label" parent="CanvasLayer"]
margin_left = 200.0
margin_top = -100.0
margin_right = 862.0
margin_bottom = -43.0001
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FELICIDADES"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="." groups=[
"camera",
]]
anims/title = SubResource( 14 )

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 479.288, 312.053 )
shape = SubResource( 15 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 494.727, 301.5 )
scale = Vector2( 0.831412, 0.849423 )
texture = ExtResource( 5 )
flip_v = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
